--- a/index.html
+++ b/index.html
@@ -3,19 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Notes PDF Viewer</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
 </head>
-<body>
-  <iframe src="notes.pdf"></iframe>
+<body style="margin:0;">
+  <script>
+    const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+    if (isMobile) {
+      document.body.innerHTML = '<a href="notes.pdf" target="_blank">Open PDF</a>';
+    } else {
+      document.body.innerHTML = '<iframe src="notes.pdf" style="width:100%;height:100vh;border:none;"></iframe>';
+    }
+  </script>
 </body>
 </html>
