--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Notes PDF Viewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body style="margin:0;">
   <script>
     const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
     if (isMobile) {
+      // Open PDF automatically in a new tab
+      window.open('notes.pdf', '_blank');
+      // Optional: show a fallback link in case popup is blocked
       document.body.innerHTML = '<a href="notes.pdf" target="_blank">Open PDF</a>';
     } else {
       document.body.innerHTML = '<iframe src="notes.pdf" style="width:100%;height:100vh;border:none;"></iframe>';
