--- a/index.html
+++ b/index.html
@@ -1,21 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Notes PDF Viewer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body style="margin:0;">
-  <script>
-    const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-    if (isMobile) {
-      // Open PDF automatically in a new tab
-      window.open('notes.pdf', '_blank');
-      // Optional: show a fallback link in case popup is blocked
-      document.body.innerHTML = '<a href="notes.pdf" target="_blank">Open PDF</a>';
-    } else {
-      document.body.innerHTML = '<iframe src="notes.pdf" style="width:100%;height:100vh;border:none;"></iframe>';
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>CISC203 — Notes (auto-open PDF)</title>
+  <style>
+    html,body { height:100%; margin:0; background:#111; color:#eee; font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
+    .viewer { width:100%; height:100vh; border:0; display:block; }
+    .fallback { padding:1rem; text-align:center; }
+    a.button {
+      display:inline-block; margin-top:.5rem; padding:.5rem .9rem; border-radius:8px; background:#0b74de; color:#fff; text-decoration:none;
     }
+  </style>
+</head>
+<body>
+  <!-- Primary attempt: <object> (good desktop + many mobile browsers) -->
+  <object class="viewer" data="notes.pdf#toolbar=1" type="application/pdf">
+    <!-- Fallback attempt: <iframe> -->
+    <iframe class="viewer" src="notes.pdf#toolbar=1">
+      <!-- Final fallback: <embed> -->
+      <embed class="viewer" src="notes.pdf#toolbar=1" type="application/pdf" />
+    </iframe>
+
+    <!-- Visible fallback if none of the above worked -->
+    <div class="fallback">
+      <h2>Unable to display PDF inline</h2>
+      <p>If the PDF did not open automatically, use the link below to open or download it:</p>
+      <a class="button" href="notes.pdf" target="_blank" rel="noopener">Open notes.pdf</a>
+    </div>
+  </object>
+
+  <script>
+    (function(){
+      // Heuristic: many Android WebViews/older browsers don't render inline PDFs well.
+      // If we detect a likely non-inline-PDF environment, redirect the browser straight to the PDF file.
+      var ua = navigator.userAgent || '';
+
+      // Consider iOS Safari and most desktop browsers to be OK inline.
+      var likelyInlineOk = /Macintosh|Windows NT|X11|iPhone|iPad|iPod/.test(ua) && !/Android/.test(ua)
+                          || /Firefox|Chrome|Edg|Safari/.test(ua) && !/Android/.test(ua);
+
+      if (!likelyInlineOk) {
+        // Replace the current page with the PDF URL so many Android browsers open it in their external viewer
+        // without requiring an extra tap on a PDF "open" button.
+        window.location.replace('notes.pdf');
+      }
+
+      // Note: there's no reliable universal JS check for "embed succeeded", so we rely on the user-agent heuristic above.
+    })();
   </script>
 </body>
 </html>
